--- a/front/justeprix/index.html
+++ b/front/justeprix/index.html
@@ -4,17 +4,19 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
     <link rel="stylesheet" href="/front/css/style.css" />
+    <title>Document</title>
   </head>
   <body>
-    <img class="imgFilm" src="" />
+    <img class="imgArticle" src="" />
+    <div id="describe"></div>
+    <div id="prix"></div>
     <ul class="command">
       <li>!change (only admin)</li>
       <li>!quiz (only admin) => liste de jeu disponible</li>
       <li>!help => but du jeu</li>
-      <li>!votre proposition de film</li>
+      <li>!votre proposition de prix</li>
     </ul>
-    <script type="module" src="/front/cinema/cinema.js"></script>
+    <script type="module" src="/front/justeprix/justeprix.js"></script>
   </body>
 </html>
