--- a/front/menu/index.html
+++ b/front/menu/index.html
@@ -8,13 +8,13 @@
     <link rel="stylesheet" href="/front/css/style.css" />
   </head>
   <body>
-    <img class="imgFilm" src="" />
     <ul class="command">
-      <li>!change (only admin)</li>
-      <li>!quiz (only admin) => liste de jeu disponible</li>
-      <li>!help => but du jeu</li>
-      <li>!votre proposition de film</li>
+      <li>Liste de command</li>
+      <li>!quizfilm (only admin)</li>
+      <li>!quizmotus (only admin)</li>
+      <li>!quizprice (only admin)</li>
+      <li>!admin => donne la liste de command disponible</li>
     </ul>
-    <script type="module" src="/front/cinema/cinema.js"></script>
+    <script type="module" src="/front/menu/menu.js"></script>
   </body>
 </html>
